Refactor onboarding UI for professional design + consolidate settings menu
- Refactored OnboardingView with split-pane layout and card-based design
- Integrated Invest.png background image on login screen
- Modern professional styling with improved color palette and typography
- Enhanced form organization with better spacing and visual hierarchy
- Extracted styling constants (CARD_STYLE, INPUT_STYLE, BUTTON_*) for reusability
- Created helper methods for button creation, field styling, and layout
- Consolidated all application settings into organized Settings menu
- Reorganized Settings menu with three sections: Trading & Broker, Appearance & UI, Account & Security
- Removed redundant settings items from File menu
- Improved menu bar order for better accessibility
- SystemCore: Implemented 8 new API methods (getSystemState, isKillSwitchTriggered, etc.)
- Account: Added 6 position management methods
- Telegram bot: Fixed command parsing and OpenAI integration
- Exchange switching: Fixed WebSocket reuse error with proper disconnect
- Added market data model classes for trading engine
- DefaultMoneyFormatter: Completed refactoring with digit grouping and locale support